Logger/logger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger
spec:
  selector:
    matchLabels:
      app: logger
  replicas: 1
  template:
    metadata:
      labels:
        app: logger
    spec:
      containers:
      - name: logger
        image: rzpav21/logger:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 5000
